Optimizing and applying feedback